# Autonomous_Shopping_Guide_Robot

./: CMakeLists.txt  LICENSE  Problem Log  README.md  build.sh  car_control  content
Basic_Development/Arm_Vision_Sys/Color_Detect/: CMakeLists.txt  ColorDetectionCallback.cpp  HSC_colordet.cpp
Basic_Development/Arm_Vision_Sys/face_detect/: CMakeLists.txt  face_det_callb.cpp  test.cpp
Basic_Development/Arm_Vision_Sys/motDetect/: ARM_SYS_EXTENSION.cpp  ARM_TEST_EXTENSION.cpp  CMakeLists.txt  arm_det.cpp  arm_opencv_PC.cpp  arm_opencv_cb.cpp
Basic_Development/Car_Control/: CMakeLists.txt  CarControl.cpp  README.md  main.cpp
Basic_Development/Car_Control/2.0/: CarControl.cpp
Basic_Development/Car_Control/3.0/: CarControl.cpp  CarControl.hpp  main.cpp
Basic_Development/Car_Control/4.0/: CarControl.cpp  CarControl.hpp  main.cpp
Basic_Development/Car_Control/Raspi_motor_board/pigpio_/: DC+servo_control.cpp  DC_motorcontrol_i2c.cpp  Emakefun_MotorShield.h  servo+DC_control.cpp
Basic_Development/New_Car_Control/Encoder_Base/: CMakeLists.txt  Emakefun_MotorDriver.cpp  Emakefun_MotorDriver.h  Emakefun_MotorShield.cpp  Emakefun_MotorShield.h  EncoderMotTest.cpp  EncoderShield.cpp  EncoderShield.h  PID.cpp  PID.h  Raspi_i2c.cpp  Raspi_i2c.h  encoder.cpp  encoder.h
Basic_Development/sensors/Lidar/Lida_service/: CMakeCache.txt  CMakeLists.txt  widget.cpp  widget.h
Basic_Development/sensors/TCRT5000/: CMakeLists.txt  TCRT5000_Drive.cpp
Basic_Development/sensors/Voice/QT_Test/: CMakeLists.txt  sound.cpp  sound.h
Basic_Development/sensors/mpu/mpu6050/: CMakeLists.txt  mpu6050_roll.cpp
Basic_Development/sensors/mpu/mpu6050/d/: CppThredd.hpp  mpufrom_15.h
Basic_Development/sensors/mpu/rewrite/: CMakeLists.txt  MPU6050Filter.cpp  MPU6050Filter.h  i2c.h  main.c  main.cpp  mpu6050_car.cpp
Basic_Development/sensors/mpu/rewrite/git_version/: CMakeLists.txt  Example.cpp  MPU6050.cpp  MPU6050.h  cmake_uninstall.cmake.in
Car_Control/: CMakeLists.txt  CarControl(3.0).hpp  CarControl(D).cpp  CarControl.cpp  CarControl.hpp  README.md  main(D).cpp  main.cpp  readme (2).md
HTML/: index.html
Lidar/: CMakeLists.txt  Lidar_config_learn.md  Lidar_config_learn_ros.md  Lidar_drive_mapping_nav.md  build.sh  car_control.cpp  car_control.hpp  test.cpp
Lidar/output/: mm
Lidar/src/Qt/Lida_service/: CMakeLists.txt  CppTimer.h  Lida_service  cmake_install.cmake  widget.cpp  widget.h  widget.ui
Lidar/src/Qt/Lida_service/Lida_service_autogen/: moc_predefs.h
Lidar/src/Qt/Lida_service/Lida_service_autogen/EWIEGA46WW/: moc_qcustomplot.cpp.d  moc_widget.cpp.d
Lidar/src/Qt/Lida_service/Lida_service_autogen/include/: ui_widget.h
Lidar/src/Qt/build-Lida_service-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Lidar/src/Qt/build-Lida_service-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-1f4685db8065ecabe889.json  cache-v2-73858795d2dae4b5179a.json  cache-v2-9696538b99d4e6e869c1.json  cache-v2-d2141f8f8402ffcfcd42.json  cmakeFiles-v1-35d1b73b567172dd6c33.json  cmakeFiles-v1-610b16d1302765f7237f.json  cmakeFiles-v1-d243b8ef916a99e9d274.json  cmakeFiles-v1-ec88eda1fc61de9c0223.json  codemodel-v2-205be5e6421d41a97b5a.json  codemodel-v2-5d69073635cc32e006c0.json  codemodel-v2-be62db83f82c3fd52294.json  index-2024-04-13T08-19-27-0532.json  index-2024-04-14T13-56-29-0847.json  index-2024-04-15T16-22-22-0150.json  index-2024-04-16T13-34-17-0563.json  target-Lida_service-Debug-02322342e98db9133fb2.json  target-Lida_service-Debug-0b5308dc3e27722bf38b.json  target-Lida_service-Debug-baba61cef6e429eb00d2.json  target-Lida_service_autogen-Debug-30eddd5e093c50d46413.json
Lidar/src/Qt/build-Lida_service-Desktop-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-66bbf4c28f7a2a190c74.json  target-Lida_service-Debug-5004ca450990aff33ebb.json
Lidar/src/Qt/build-Lida_service-Desktop-Debug/Lida_service_autogen/: moc_predefs.h  mocs_compilation.cpp
Lidar/src/Qt/build-Lida_service-Desktop-Debug/Lida_service_autogen/EWIEGA46WW/: moc_qcustomplot.cpp  moc_qcustomplot.cpp.d  moc_widget.cpp  moc_widget.cpp.d
Lidar/src/Qt/build-Lida_service-Desktop-Debug/Lida_service_autogen/include/: ui_widget.h
Lidar/src/Qt/build-mai1_test-Desktop-RelWithDebInfo/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Lidar/src/Qt/build-mai1_test-Desktop-RelWithDebInfo/.cmake/api/v1/reply/: cache-v2-d9a47d1e78291e2e1308.json  cmakeFiles-v1-567245143f921d88f686.json  codemodel-v2-fdf23fdc2b5e960cc97a.json  index-2024-04-12T22-10-08-0179.json  target-mai1_test-RelWithDebInfo-dda06049bef5b2649245.json
Lidar/src/Qt/build-mai_start-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Lidar/src/Qt/build-mai_start-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-ceac0af4b3f4ad9eddd8.json  cmakeFiles-v1-5e88cf7869fedea40c4d.json  codemodel-v2-45db72e93d1a04c0562a.json  index-2024-04-12T22-10-00-0217.json  target-mai_start-Debug-1eca69f52b312220ada4.json  target-mai_start_autogen-Debug-9e6e835afb9f68da3b5a.json
Lidar/src/Qt/build-mai_start-Desktop-Debug/mai_start_autogen/EWIEGA46WW/: moc_widget.cpp  moc_widget.cpp.d
Lidar/src/Qt/build-mai_start-Desktop-Debug/mai_start_autogen/include/: ui_widget.h
Lidar/src/Qt/mai1_test/: CMakeLists.txt  main.cpp
Lidar/src/Qt/mai_start/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Raspi_motor_board/: car_control with rasp_motor.cpp
Structural components/: design drawings.md
cmake/: CMakeLists.txt
data/: data_intro.md
docs/: ARM_SYS_H.h  (+6 more)
sensors/Voice/: CMakeLists.txt  DF23_voi.cpp  DF23_voi.h  DFRobot_DF2301Q_RPI.cpp  DFRobot_DF2301Q_RPI.h  Sound_com.cpp  Sound_key.md  arm_sys.cpp  arm_sys.h  i2c.cpp  i2c_2.cpp  i2c_Asy.cpp  moto_voice.cpp
sensors/Voice/Old_version/: DFRobot_DF2310Q.h  voice_test.cpp
sensors/Voice/Old_version/cpp/: DFRbot1_2.cpp  DFRobot_DF2301Q.cpp  DFRobot_DF2301Q_RPi.h
sensors/Voice/QT/: widget.cpp  widget.h
sensors/Voice/cpp/: DFRobot_DF2301Q.h
sensors/Voice/py_i2c/: DFRobot_DF2310Q.py
sensors/Voice/rewrite_file/: DFbot_voi.cpp  DFbot_voi.h
sensors/Voice/rewrite_file/example/: i2c_Asy.cpp  using_ram.cpp
(+113 files in other folders)
